Fix alert button alignment on Firefox

--- a/src/subtitulamos/resources/assets/css/translate.scss
+++ b/src/subtitulamos/resources/assets/css/translate.scss
@@ -71,6 +71,7 @@
       height: 30px;
       font-size: 0.7rem;
       border-radius: 50%;
+      padding: 0;
 
       &:hover {
         background-color: var(--color-gray-a);
